--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8081
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://studmysql01.fhict.local/dbi361369
-spring.datasource.username=dbi361369
-spring.datasource.password=Wachtwoord1
+spring.datasource.url=jdbc:mysql://localhost:3306/memorydb
+spring.datasource.username=admin
+spring.datasource.password=password12
